# cubara

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  REQUIREMENTS.md  ROADMAP.md  run.bat  run.command
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: bench.rs  caps.rs  game.rs  main.rs  mesh.rs  profiling.rs  render.rs  screenshot.rs  voxel.rs  world.rs
crates/app/src/shaders/: cube.wgsl  triangle.wgsl
crates/render/: Cargo.toml
crates/render/src/: arena.rs  camera.rs  culling.rs  headless.rs  lib.rs  mesher.rs  render.rs  scene.rs
crates/render/src/shaders/: mesh.wgsl
crates/render/src/text/: font.rs  mod.rs  text.wgsl
crates/render/tests/: golden.rs
crates/render/tests/golden/: .gitignore
crates/voxel/: Cargo.toml
crates/voxel/src/: coord.rs  lib.rs  mesh.rs  voxel.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs  raycast.rs  streaming.rs  world.rs
docs/: ISSUE_STANDARD.md
scripts/: check-architecture.sh  check-single-render-path.sh
