[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Julian Poelsma"]

# Shared dependency versions for all crates in the workspace.
[workspace.dependencies]
winit = "0.30"
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
log = "0.4"
env_logger = "0.11"

# Optimize dependencies even in debug builds so the engine is playable while we
# still get fast incremental compiles on our own crates.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
