[package]
name = "cubara"
description = "Cubara — a high-performance voxel engine and game."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "cubara"
path = "src/main.rs"

[features]
# Enable in-process CPU profiling served over puffin_http (off by default).
profile = ["dep:puffin_http"]

[dependencies]
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true
glam.workspace = true
log.workspace = true
env_logger.workspace = true
# puffin scope macros compile to near-nothing unless scopes are enabled at runtime.
puffin.workspace = true
puffin_http = { workspace = true, optional = true }
