[package]
name = "cubara"
description = "Cubara — a high-performance voxel engine and game."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "cubara"
path = "src/main.rs"

[features]
# Enable in-process CPU profiling; forwards to the renderer's puffin_http server.
profile = ["cubara-render/profile"]

[dependencies]
cubara-voxel = { path = "../voxel" }
cubara-render = { path = "../render" }
cubara-world = { path = "../world" }
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true
log.workspace = true
env_logger.workspace = true
# puffin scope macros compile to near-nothing unless scopes are enabled at runtime.
puffin.workspace = true
image.workspace = true
